--- a/private.html
+++ b/private.html
@@ -1771,9 +1771,9 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>exceeding this you will need to unlock your wan ip manually at their site</p>
 <p>the JsonNode is returned for further processing if needed</p>
 <p>and can be queried like so</p>
-<p>echo getfields(jz)</p>
-<p>echo jz[&quot;city&quot;].getstr</p>
-
+<pre class = "listing"><span class="Keyword">var</span> <span class="Identifier">jz</span> <span class="Operator">=</span> <span class="Identifier">getIpInfo</span><span class="Punctuation">(</span><span class="StringLit">&quot;208.80.152.201&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span> <span class="Identifier">getfields</span><span class="Punctuation">(</span><span class="Identifier">jz</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span> <span class="Identifier">jz</span><span class="Punctuation">[</span><span class="StringLit">&quot;city&quot;</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Identifier">getstr</span></pre>
 
 </dd>
 <dt id="showIpInfo"><a name="showIpInfo,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showIpInfo</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">ip</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
@@ -1781,8 +1781,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>showIpInfo</p>
 <p>displays ip details for a given ip</p>
 <p>Example:</p>
-<p>showIpInfo(&quot;208.80.152.201&quot;) </p>
-
+<pre class = "listing"><span class="Identifier">showIpInfo</span><span class="Punctuation">(</span><span class="StringLit">&quot;208.80.152.201&quot;</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="getRandomInt"><a name="getRandomInt,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomInt</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">mi</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1000000000</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
@@ -2030,7 +2029,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-08-11 21:32:54 UTC</small>
+        <small>Made with Nim. Generated: 2015-08-11 21:37:07 UTC</small>
       </div>
     </div>
   </div>
