--- a/private.html
+++ b/private.html
@@ -1218,6 +1218,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="getTerminalWidth*(): int"><wbr />get<wbr />Terminal<wbr />Width</a></li>
   <li><a class="reference" href="#dline,int"
     title="dline*(n: int = tw)"><wbr />dline</a></li>
+  <li><a class="reference" href="#curUp,int"
+    title="curUp*(x: int = 1)"><wbr />cur<wbr />Up</a></li>
+  <li><a class="reference" href="#curDn,int"
+    title="curDn*(x: int = 1)"><wbr />cur<wbr />Dn</a></li>
   <li><a class="reference" href="#clearup,int"
     title="clearup*(x: int = 80)"><wbr />clearup</a></li>
   <li><a class="reference" href="#printTuple,"
@@ -1509,6 +1513,20 @@ check execution timing with one line see doFinish
 <dd>
 <p>dline</p>
 <p>draw a line with given length </p>
+
+
+</dd>
+<dt id="curUp"><a name="curUp,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">curUp</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>curUp</p>
+<p>mirrors terminal cursorUp</p>
+
+
+</dd>
+<dt id="curDn"><a name="curDn,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">curDn</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>curDn</p>
+<p>mirrors terminal cursorDown</p>
 
 
 </dd>
@@ -1963,7 +1981,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <dt id="qqTop"><a name="qqTop,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">qqTop</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>qqTop</p>
-<p>prints qqTop in custom color</p>
+<p>prints qqTop in custom color </p>
 
 
 </dd>
@@ -2103,7 +2121,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-08-25 21:54:56 UTC</small>
+        <small>Made with Nim. Generated: 2015-08-26 13:09:00 UTC</small>
       </div>
     </div>
   </div>
