--- a/private.html
+++ b/private.html
@@ -1635,7 +1635,7 @@ check execution timing with one line see doFinish
 <dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;yellow&quot;</span><span class="Other">;</span>
                   <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;white&quot;</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printBiCol</p>
+<p>printLnBiCol</p>
 <p>same as printBiCol but issues a new line</p>
 <pre class = "listing"><span class="Keyword">for</span> <span class="Identifier">x</span>  <span class="Keyword">in</span> <span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="Operator">&lt;</span><span class="DecNumber">3</span><span class="Punctuation">:</span>
    <span class="Comment"># here use default colors for left and right side of the seperator</span>
@@ -2148,7 +2148,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-08-29 20:58:11 UTC</small>
+        <small>Made with Nim. Generated: 2015-08-29 21:07:17 UTC</small>
       </div>
     </div>
   </div>
