--- a/private.html
+++ b/private.html
@@ -1819,8 +1819,8 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>superheader</p>
 <p>a framed header display routine</p>
 <p>suitable for one line headers , overlong lines will</p>
-<p>be cut to terminal window size with out ceremony</p>
-<p>the color of the string can be selected available colors</p>
+<p>be cut to terminal window size without ceremony</p>
+<p>the color of the string can be selected, available colors</p>
 <p>green,red,cyan,white,yellow and for going completely bonkers the frame</p>
 <p>can be set to clrainbow too .</p>
 <pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span><span class="Punctuation">,</span><span class="Identifier">terminal</span>
@@ -2148,7 +2148,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-08-29 21:07:17 UTC</small>
+        <small>Made with Nim. Generated: 2015-08-29 21:11:48 UTC</small>
       </div>
     </div>
   </div>
